# SIH/aagaah/docs/openapi.json
@@ -74,12 +74,38 @@
       "get": {
         "summary": "Dashboard",
         "operationId": "dashboard_dashboard_get",
+        "parameters": [
+          {
+            "name": "mode",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "enum": [
+                "replay",
+                "live"
+              ],
+              "type": "string",
+              "default": "replay",
+              "title": "Mode"
+            }
+          }
+        ],
         "responses": {
           "200": {
             "description": "Successful Response",
             "content": {
               "application/json": {
                 "schema": {}
+              }
+            }
+          },
+          "422": {
+            "description": "Validation Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/HTTPValidationError"
+                }
               }
             }
           }
